fixed spacing and button sizing

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ nav {
   background-color: #BEE498;
   text-align: center;
   left: 10%;
-  padding: 1% 3% 1% 3%;
+  padding: 3% 25% 3% 25%;
   font-size: 28px;
   font-weight: 700;
   font-family: Rubik;
@@ -134,7 +134,7 @@ nav {
 
 .section2 {
   width: 100%;
-  height: 864.04px;
+  /* height: 864.04px; */
   background-color: #BEE498;
 }
 
